k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-arch
spec:
  selector:
    app: micro-arch
  ports:
    - port: 8000
      name: http
      targetPort: 80
#    - port: 8081
#      name: actuator
#      targetPort: actuator
  type: NodePort
