k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-arch
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service: 
              name: micro-arch
              port: 
                number: 8000
#        - path: /otusapp($|/)(.*)
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: micro-arch
#              port: 
#                number: 8000
#        - path: /actuator/health
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: micro-arch
#              port:
#                number: 8081
